compiler/testData/diagnostics/tests/incompleteCode/NoSenselessComparisonForErrorType.fir.kt
package a

fun foo() {
    konst a = <!UNRESOLVED_REFERENCE!>getErrorType<!>()
    if (a == null) { //no senseless comparison

    }
}
